# snippets

./: README.md
serde_default_variant/: Cargo.toml
serde_default_variant/src/: main.rs
