[package]
publish = false
name = "serde_default_variant"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[patch.crates-io]
serde = { git = "https://github.com/agausmann/serde.git", branch = "default_variant" }
serde_derive = { git = "https://github.com/agausmann/serde.git", branch = "default_variant" }
